results/securify2/unchecked_low_level_calls_0xf2570186500a46986f3139f65afedc2afe4f445d.error.txt
WARNING: The requested image's platform (linux/amd64) does not match the detected host platform (linux/arm64/v8) and no specific platform was requested
Traceback (most recent call last):
  File "securify/__main__.py", line 286, in <module>
    main()
  File "securify/__main__.py", line 277, in main
    matches.extend(pattern.find_matches())
  File "/sec/securify/analyses/patterns/static/static_analysis_patterns.py", line 73, in find_matches
    static = analysis_context.static_analysis
  File "/sec/securify/analyses/analysis.py", line 88, in static_analysis
    self._static = self.config.static_analysis(self)
  File "securify/__main__.py", line 255, in <lambda>
    static_analysis=lambda t: static_analysis.analyze_cfg(t.cfg, **souffle_config),
  File "/sec/securify/analyses/analysis.py", line 81, in cfg
    self._cfg = self.config.cfg_compiler(self)
  File "securify/__main__.py", line 254, in <lambda>
    cfg_compiler=lambda t: solidity_cfg_compiler.compile_cfg(t.ast).cfg,
  File "/sec/securify/analyses/analysis.py", line 74, in ast
    self._ast = self.config.ast_compiler(self)
  File "securify/__main__.py", line 253, in <lambda>
    ast_compiler=lambda t: solidity_ast_compiler.compile_ast(t.source_file),
  File "/sec/securify/solidity/solidity_ast_compiler.py", line 31, in compile_ast
    compile_output = compile_standard(compile_input, allow_paths='/')
  File "/usr/local/lib/python3.7/dist-packages/py_solc-3.2.0-py3.7.egg/solc/main.py", line 181, in compile_standard
    message=error_message,
solc.exceptions.SolcError: fixed_pragma.sol:14:5: SyntaxError: No visibility specified. Did you intend to add "public"?
    function makeOldFucks(uint32 number) {
    ^ (Relevant source part starts here and spans across multiple lines).

fixed_pragma.sol:18:30: TypeError: "sha3" has been deprecated in favour of "keccak256"
            fuck.call(bytes4(sha3("giveBlockReward()")));
                             ^--^

fixed_pragma.sol:18:23: TypeError: Invalid type for argument in function call. Invalid implicit conversion from bytes4 to bytes memory requested. This function requires a single bytes argument. If all your arguments are value types, you can use abi.encode(...) to properly generate it.
            fuck.call(bytes4(sha3("giveBlockReward()")));
                      ^-------------------------------^

        > command: `solc --allow-paths / --standard-json`
        > return code: `0`
        > stderr:
        {"errors":[{"component":"general","formattedMessage":"fixed_pragma.sol:14:5: SyntaxError: No visibility specified. Did you intend to add \"public\"?\n    function makeOldFucks(uint32 number) {\n    ^ (Relevant source part starts here and spans across multiple lines).\n","message":"No visibility specified. Did you intend to add \"public\"?","severity":"error","sourceLocation":{"end":487,"file":"fixed_pragma.sol","start":269},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:18:30: TypeError: \"sha3\" has been deprecated in favour of \"keccak256\"\n            fuck.call(bytes4(sha3(\"giveBlockReward()\")));\n                             ^--^\n","message":"\"sha3\" has been deprecated in favour of \"keccak256\"","severity":"error","sourceLocation":{"end":447,"file":"fixed_pragma.sol","start":443},"type":"TypeError"},{"component":"general","formattedMessage":"fixed_pragma.sol:18:23: TypeError: Invalid type for argument in function call. Invalid implicit conversion from bytes4 to bytes memory requested. This function requires a single bytes argument. If all your arguments are value types, you can use abi.encode(...) to properly generate it.\n            fuck.call(bytes4(sha3(\"giveBlockReward()\")));\n                      ^-------------------------------^\n","message":"Invalid type for argument in function call. Invalid implicit conversion from bytes4 to bytes memory requested. This function requires a single bytes argument. If all your arguments are value types, you can use abi.encode(...) to properly generate it.","severity":"error","sourceLocation":{"end":469,"file":"fixed_pragma.sol","start":436},"type":"TypeError"},{"component":"general","formattedMessage":"fixed_pragma.sol:18:13: Warning: Return value of low-level calls not used.\n            fuck.call(bytes4(sha3(\"giveBlockReward()\")));\n            ^------------------------------------------^\n","message":"Return value of low-level calls not used.","severity":"warning","sourceLocation":{"end":470,"file":"fixed_pragma.sol","start":426},"type":"Warning"}],"sources":{}}

        > stdout:
